--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             Kerja</a>
                     </li>
                     <li class="nav-item">
-                        <a href="kelompok.html" class="nav-link" href="#"><i
+                        <a href="teams.html" class="nav-link" href="#"><i
                                 class="uil uil-users-alt me-2"></i>Kelompok</a>
                     </li>
                 </ul>
@@ -55,7 +55,7 @@
     <div class="container">
         <!-- INTRO -->
         <div class="text-center z-index-999 position-relative" id="intro">
-            <img src="images/intro.png" alt="intro" class="w-50">
+            <img src="images/intro.png" alt="intro">
             <p class="fw-bold red-text sapaan">Reverse Litter Vending Machine</p>
             <p class="dark-text intro-info">
                 <b>Ayo </b> <span id="intro-info"></span>
@@ -65,21 +65,21 @@
         <!-- VENDING MACHINE -->
         <div class="z-index-999 position-relative" id="vending-machine" data-aos="fade-right">
             <div class="row">
-                <div class="col-md-5">
-                    <img src="images/vending-machine.png" alt="vending-machine" class="w-100">
+                <div class="col-md-5 vending">
+                    <img src="images/vending-machine.png" alt="vending-machine">
                 </div>
                 <div class="col-md-7 d-flex align-items-center justify-content-center">
                     <div>
                         <p class="content-heading fw-bold red-text">Apa Sih Reverse Vending Machine?
                         </p>
-                        <p class="about-vending">Reverse Vending Machine (RVM) merupakan mesin yang memungkinkan
+                        <p class="content-text">Reverse Vending Machine (RVM) merupakan mesin yang memungkinkan
                             seseorang untuk memasukan
                             sampah
                             plastik kedalam mesin yang dapat ditukarkan dengan hadiah. Hadiah yang diberikan bervariasi,
                             mulai
                             dari uang cash ataupun poin yang dapat ditukarkan dengan dompet digital.
                         </p>
-                        <p class="about-vending">Dewasa ini sudah semakin banyak reverse vending machine yang memberikan
+                        <p class="content-text">Dewasa ini sudah semakin banyak reverse vending machine yang memberikan
                             hadiah berupa poin
                             yang
                             dapat dibelanjakan. Salah satunya dapat ditemukan di dekat tugu Monas, Jakarta Pusat.</p>
