--- a/teams.html
+++ b/teams.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anggota Kelompok | Teach For Indonesia</title>
+    <link rel="shortcut icon" href="images/tfi.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,25 +20,27 @@
     <div id="particles-js"></div>
 
     <!-- KELOMPOK -->
-    <div class="z-index-999 position-relative" id="kelompok" data-aos="fade-right">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="images/kelompok.png" alt="Kelompok" class="w-100">
-            </div>
-            <div class="col-md-6 d-flex align-items-center justify-content-center">
-                <div>
-                    <p class="content-heading text-center fw-bold text-pink">ANGGOTA KELOMPOK</p>
-                    <ul class="content-text m-0 p-0 list text-center">
-                        <li>Muhamad Ndaru Hestiafin - 2440064766</li>
-                        <li>Gabriel Rolly Davinsi - 2440071582</li>
-                        <li>Tantowi Putra Agung Setiawan - 2440063271</li>
-                    </ul>
+    <div style="height: 100vh;" class="d-flex align-items-center z-index-999 position-relative">
+        <div class="container">
+            <a href="index.html" class="fs-4 fw-bold text-decoration-none"><i
+                    class="uil uil-angle-left ms-1"></i>Kembali</a>
+            <div id="kelompok" data-aos="zoom-in">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <img src="images/kelompok.png" alt="Kelompok" class="w-100">
+                    </div>
+                    <div class="col-md-6">
+                        <p class="content-heading fw-bold red-text">ANGGOTA KELOMPOK</p>
+                        <ul class="content-text m-0 p-0 list">
+                            <li>Muhamad Ndaru Hestiafin - 2440064766</li>
+                            <li>Gabriel Rolly Davinsi - 2440071582</li>
+                            <li>Tantowi Putra Agung Setiawan - 2440063271</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
