--- a/teams.html
+++ b/teams.html
@@ -36,6 +36,17 @@
                             <li>Gabriel Rolly Davinsi - 2440071582</li>
                             <li>Tantowi Putra Agung Setiawan - 2440063271</li>
                         </ul>
+                        <div class="row mt-3">
+                            <div class="col-2">
+                                <img src="images/ndaru.jpg" alt="ndaru" class="w-100 rounded shadow-sm">
+                            </div>
+                            <div class="col-2">
+                                <img src="images/tantowi.jpg" alt="tantowi" class="w-100 rounded shadow-sm">
+                            </div>
+                            <div class="col-2">
+                                <img src="images/gabriel.jpg" alt="gabriel" class="w-100 rounded shadow-sm">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
