--- a/teams.html
+++ b/teams.html
@@ -37,13 +37,13 @@
                             <li>Tantowi Putra Agung Setiawan - 2440063271</li>
                         </ul>
                         <div class="row mt-3">
-                            <div class="col-2">
+                            <div class="col-md-2 col-3">
                                 <img src="images/ndaru.jpg" alt="ndaru" class="w-100 rounded shadow-sm">
                             </div>
-                            <div class="col-2">
+                            <div class="col-md-2 col-3">
                                 <img src="images/tantowi.jpg" alt="tantowi" class="w-100 rounded shadow-sm">
                             </div>
-                            <div class="col-2">
+                            <div class="col-md-2 col-3">
                                 <img src="images/gabriel.jpg" alt="gabriel" class="w-100 rounded shadow-sm">
                             </div>
                         </div>
