set teams margin

--- a/teams.html
+++ b/teams.html
@@ -20,7 +20,7 @@
     <div id="particles-js"></div>
 
     <!-- KELOMPOK -->
-    <div style="height: 100vh;" class="d-flex align-items-center z-index-999 position-relative">
+    <div style="height: 100vh;" class="d-flex teams z-index-999 position-relative">
         <div class="container">
             <a href="index.html" class="fs-4 fw-bold text-decoration-none"><i
                     class="uil uil-angle-left ms-1"></i>Kembali</a>
