change nav icon

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#intro" class="nav-link"><i class="uil uil-location-arrow me-2"></i>Perkenalan</a>
+                        <a href="#intro" class="nav-link"><i class="uil uil-lightbulb-alt me-2"></i>Perkenalan</a>
                     </li>
                     <li class="nav-item">
                         <a href="#vending-machine" class="nav-link" href="#"><i
-                                class="uil uil-users-alt me-2"></i>Vending Machine</a>
+                                class="uil uil-location-arrow me-2"></i>Vending Machine</a>
                     </li>
                     <li class="nav-item">
                         <a href="#tutorial" class="nav-link" href="#"><i class="uil uil-meeting-board me-2"></i>Cara
